--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "oh-vue-icons": "^1.0.0-rc3",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
